Cambio la imagen del nav de la pagina principal

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@ p { color: #35302D}
 
 h1 {font-weight: 700; margin: 20px 0; color: #000;}
 
-header {background: url(../img/fondo1.jpg) center top fixed;  margin: 0; padding: 50px 0; background-size:  cover }
+header {background: url(https://www.telesurtv.net/__export/1510353441275/sites/telesur/img/multimedia/2017/11/10/librerxa1.jpg) center top fixed;  margin: 0; padding: 50px 0; background-size:  cover }
 
  /* background-image: url(../img/fondo1.jpg); background-size: cover;
  background-position: center top; background-attachment: fixed ---- esto vamos a resumir */
