--- a/css/estiloAbout.css
+++ b/css/estiloAbout.css
@@ -1,6 +1,6 @@
 body {font-family: 'Open Sans', sans-serif; font-weight: 300; font-size: 20px; margin: 0;}
+.imagen{width: 100px;float: left;}
 
-.container { margin: 0 auto; max-width: 900px; padding: 0 20px; text-align: center }
 
 p {
 	color: #35302D ;
